<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddTask"
    tools:visibility="visible">

    <Spinner
        android:id="@+id/teamSpinner"
        android:layout_width="0dp"
        android:layout_height="63dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskTaskBody" />

    <Button
        android:id="@+id/AddTaskSubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="87dp"
        android:layout_marginBottom="16dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teamSpinner"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/AddTaskTaskName"
        android:layout_width="208dp"
        android:layout_height="59dp"
        android:layout_marginTop="108dp"
        android:ems="10"
        android:hint="Task Name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/AddTaskTaskBody"
        android:layout_width="217dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="Task Body"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskTaskName" />

    <Spinner
        android:id="@+id/AddTaskSpinnerStatus"
        android:layout_width="0dp"
        android:layout_height="63dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskTaskBody" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="241dp"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/AddTaskSpinnerStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

    <ImageView
        android:id="@+id/imageViewContent"
        android:layout_width="107dp"
        android:layout_height="78dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="230dp"
        android:layout_marginBottom="45dp"
        app:layout_constraintBottom_toTopOf="@+id/AddTaskTaskName"
        app:layout_constraintEnd_toStartOf="@+id/addImageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/amplify_storage_transfer_notification_icon" />

    <TextView
        android:id="@+id/AddTaskLatLong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="45dp"
        android:text="this is text from this text"
        app:layout_constraintBottom_toTopOf="@+id/AddTaskSpinnerStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskTaskBody" />

</androidx.constraintlayout.widget.ConstraintLayout>