<resources>
    <string name="app_name">CometTask</string>
    <string name="toAddTask">Add Task</string>
    <string name="toViewAllTasks">View All Tasks</string>
    <string name="submit">Submit</string>
    <string name="title">Task Title</string>
    <string name="body">Task Body</string>
    <string name="success">Successfully Submitted!</string>
    <string name="back">Back</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>